// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PokemonCard /> renders without crashing 1`] = `
<article
  className="Card__CardWrapper-sc-3o7tcb-0 bTjMad"
>
  <header
    className="Card__CardHeader-sc-3o7tcb-1 bHjeqI"
  >
    <h2
      className="CardHeading-mmeo34-0 ebVIiR"
    >
      #25 Pikachu
    </h2>
  </header>
  <div
    className="Card__CardContent-sc-3o7tcb-2 PokemonCard__PokemonCardContent-cna285-0 fAfsVy"
  >
    <img
      alt="pikachu sprite"
      className="PokemonCard__PokemonCardSprite-cna285-1 kzqAzL"
      src="/sprites/25.png"
    />
    <ul
      className="InlineList-sc-1dn69qz-0 YzWxJ"
    >
      <li>
        <span
          className="TypeTag-sc-1dttu8y-0 byzsso"
          type="ELECTRIC"
        >
          ELECTRIC
        </span>
      </li>
    </ul>
  </div>
</article>
`;

exports[`<PokemonCard /> when a pokemon with more than one type is passed renders all types 1`] = `
<article
  className="Card__CardWrapper-sc-3o7tcb-0 bTjMad"
>
  <header
    className="Card__CardHeader-sc-3o7tcb-1 cPIdkO"
  >
    <h2
      className="CardHeading-mmeo34-0 ebVIiR"
    >
      #1 Bulbasaur
    </h2>
  </header>
  <div
    className="Card__CardContent-sc-3o7tcb-2 PokemonCard__PokemonCardContent-cna285-0 fAfsVy"
  >
    <img
      alt="bulbasaur sprite"
      className="PokemonCard__PokemonCardSprite-cna285-1 kzqAzL"
      src="/sprites/1.png"
    />
    <ul
      className="InlineList-sc-1dn69qz-0 YzWxJ"
    >
      <li>
        <span
          className="TypeTag-sc-1dttu8y-0 jHkiSl"
          type="GRASS"
        >
          GRASS
        </span>
      </li>
      <li>
        <span
          className="TypeTag-sc-1dttu8y-0 jjNEEF"
          type="POISON"
        >
          POISON
        </span>
      </li>
    </ul>
  </div>
</article>
`;

exports[`<PokemonCard /> when a renderCardActions function is passed renders the card actions 1`] = `
<article
  className="Card__CardWrapper-sc-3o7tcb-0 bTjMad"
>
  <header
    className="Card__CardHeader-sc-3o7tcb-1 bHjeqI"
  >
    <h2
      className="CardHeading-mmeo34-0 ebVIiR"
    >
      #25 Pikachu
    </h2>
  </header>
  <div
    className="Card__CardContent-sc-3o7tcb-2 PokemonCard__PokemonCardContent-cna285-0 fAfsVy"
  >
    <img
      alt="pikachu sprite"
      className="PokemonCard__PokemonCardSprite-cna285-1 kzqAzL"
      src="/sprites/25.png"
    />
    <ul
      className="InlineList-sc-1dn69qz-0 YzWxJ"
    >
      <li>
        <span
          className="TypeTag-sc-1dttu8y-0 byzsso"
          type="ELECTRIC"
        >
          ELECTRIC
        </span>
      </li>
    </ul>
    <div
      className="PokemonCard__PokemonCardActions-cna285-2 kULEFY"
    >
      <div>
        Card actions that should be rendered
      </div>
    </div>
  </div>
</article>
`;

exports[`<PokemonCard /> when pokemon is part of a team (has a member id) renders without crashing 1`] = `
<article
  className="Card__CardWrapper-sc-3o7tcb-0 bTjMad"
>
  <header
    className="Card__CardHeader-sc-3o7tcb-1 bHjeqI"
  >
    <h2
      className="CardHeading-mmeo34-0 ebVIiR"
    >
      #25 Pikachu
    </h2>
  </header>
  <div
    className="Card__CardContent-sc-3o7tcb-2 PokemonCard__PokemonCardContent-cna285-0 fAfsVy"
  >
    <img
      alt="pikachu sprite"
      className="PokemonCard__PokemonCardSprite-cna285-1 kzqAzL"
      src="/sprites/25.png"
    />
    <ul
      className="InlineList-sc-1dn69qz-0 YzWxJ"
    >
      <li>
        <span
          className="TypeTag-sc-1dttu8y-0 byzsso"
          type="ELECTRIC"
        >
          ELECTRIC
        </span>
      </li>
    </ul>
  </div>
</article>
`;
